[package]
name = "par-poly-eval"
version = "0.1.0"
authors = ["Snojj25"]
edition = "2021"
license = "MIT"
keywords = ["polynomial", "horner", "estrin"]
categories = ["algorithms", "no-std"]
description = "Faster polynomial evaluation using Estrin's Scheme to exploit instruction-level parallelism"
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"
repository = "https://github.com/Snojj25/par-poly-eval"

[features]
default = ["fma", "std"]
fma = []
std = ["num-traits/std"]
libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1
